Add seed data and show on home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,4 +7,12 @@
     <th>Hand</th>
     <th>Grade</th>
   </tr>
+  <% @players.each do |player| %>
+    <tr>
+      <td><%= player.name %></td>
+      <td><%= player.email %></td>
+      <td><%= player.hand %></td>
+      <td><%= player.grade %></td>
+    </tr>
+    <% end %>
 </table>
